--- a/.github/workflows/mkdocs.yml
+++ b/.github/workflows/mkdocs.yml
@@ -2,7 +2,8 @@ name: Documentation
 on:
   push:
     branches:
-      - gh-pages
+#       - gh-pages
+        - master
 jobs:
   deploy:
     runs-on: ubuntu-latest
