--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -32,12 +32,12 @@ nav:
   - Application:
       - API: app/api.md
       - Schemas: app/schemas.md
-  - Operations: my_project/main.md
+  - Operations: electrificat/main.md
   - Configurations: config/config.md
   - Reference:
-      - Data: my_project/data.md
-      - Eval: my_project/eval.md
-#      - Models: my_project/models.md
-#      - Training: my_project/train.md
-#      - Inference: my_project/predict.md
-#      - Utilities: my_project/utils.md
+      - Data: electrificat/data.md
+      - Eval: electrificat/eval.md
+#      - Models: electrificat/models.md
+#      - Training: electrificat/train.md
+#      - Inference: electrificat/predict.md
+#      - Utilities: electrificat/utils.md
