--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,10 +1,10 @@
 # See https://pre-commit.com for more information
 # See https://pre-commit.com/hooks.html for more hooks
 repos:
-  -   repo: https://github.com/python-poetry/poetry
-      rev: 1.2.0b1
-      hooks:
-        -   id: poetry-check
+#  -   repo: https://github.com/python-poetry/poetry
+#      rev: 1.2.0b1
+#      hooks:
+#        -   id: poetry-check
 #        -   id: poetry-lock
 #        -   id: poetry-export
 #            args: ["--dev", "-f", "requirements.txt", "-o", "requirements.txt"]
