--- a/requirements.txt
+++ b/requirements.txt
@@ -182,5 +182,5 @@ zeromq=4.3.4=h9c3ff4c_1
 zipp=3.8.0=pyhd8ed1ab_0
 zlib=1.2.11=h166bdaf_1014
 zstd=1.5.2=h8a70e8d_1
-
+pdfplumber>=0.6.2
 setuptools~=62.3.1
